--- a/web/workspace/frontend/sass/site/main.scss
+++ b/web/workspace/frontend/sass/site/main.scss
@@ -216,6 +216,7 @@ abbr {
   top: 0; right: 0; bottom: 0; left: 0;
   overflow: hidden;
   box-shadow: -6px 6px 21px rgba(0,0,0,0.16);
+  transform: translate3d(0, 0, 0);
 }
 .product__frame img {
   width: 100%;
@@ -274,4 +275,39 @@ abbr {
 		color: #000 !important;
 		border-bottom-color: #000 !important;
 	}
+}
+
+.gallery div {
+	display: block;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+	max-width: 100%;
+	max-height: 100%;
+	
+	pointer-events: none;
+	
+	opacity: 0;
+	transition: opacity 0.5s ease;
+	
+	&.active {
+		opacity: 1;
+	}
+}
+.gallery code {
+	position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(255,255,255,0.9);
+    padding: 20px;
+}
+.gallery blockquote {
+	position: absolute;
+	top: 20px; left: 20px;
+	width: 60%;
+	color: #000;
 }
