--- a/web/workspace/pages/product.dust
+++ b/web/workspace/pages/product.dust
@@ -78,10 +78,24 @@
             
             {@select key=product}
               {@eq value="api"}
-                <asciinema-player src="/assets/illustrations/asciicast-api.json" cols="159" rows="26" autoplay="true" speed="2"></asciinema-player>
+                <asciinema-player src="/assets/illustrations/asciicast-api.json" cols="159" rows="27" autoplay="true" speed="2"></asciinema-player>
 
                 <link rel="stylesheet" type="text/css" href="/assets/illustrations/asciinema-player.css">
                 <script src="/assets/illustrations/asciinema-player.js"></script>
+              {/eq}
+              {@eq value="publish"}
+                <div class="gallery">
+                  <div>
+                    <img src="/assets/illustrations/publish-1.jpg">
+
+                    <blockquote class="normal product__caption">Editors can see large volumes of data at once</blockquote>
+                  </div>
+                  <div>
+                    <img src="/assets/illustrations/publish-2.jpg">
+
+                    <blockquote class="normal product__caption">Built in asset library</blockquote>
+                  </div>
+                </div>
               {/eq}
               {@eq value="cdn"}
                 <div class="gallery">
@@ -90,28 +104,28 @@
 
                    <code class="url txt--grey"><span style="color:#000">&hellip;</span>?<span style="color:#000">width</span>=<span style="color:#E02975">700</span>&amp;<span style="color:#000">ratio</span>=<span style="color:#E02975">16-9</span>&amp;<span style="color:#000">resizeStyle</span>=<span style="color:#E02975">aspectfill</span></code>
 
-                    <blockquote class="normal">Perform complicated manipulations dynamically using an URL structure</blockquote>
+                    <blockquote class="normal product__caption">Perform complicated manipulations dynamically using an URL structure</blockquote>
                   </div>
                   <div>
                     <img src="http://52.213.165.8:8001/samples/mountain.png?width=700&ratio=12-7&resizeStyle=aspectfill&blur=4">
 
                     <code class="url txt--grey"><span style="color:#000">&hellip;</span>?<span style="color:#000">width</span>=<span style="color:#E02975">700</span>&amp;<span style="color:#000">ratio</span>=<span style="color:#E02975">16-9</span>&amp;<span style="color:#000">resizeStyle</span>=<span style="color:#E02975">aspectfill</span>&amp;<span style="color:#000">blur</span>=<span style="color:#E02975">4</span></code>
 
-                    <blockquote class="normal">Blur</blockquote>
+                    <blockquote class="normal product__caption">Blur</blockquote>
                   </div>
                   <div>
                     <img src="http://52.213.165.8:8001/samples/mountain.png?width=700&ratio=12-7&resizeStyle=aspectfill&flip=x">
 
                     <code class="url txt--grey"><span style="color:#000">&hellip;</span>?<span style="color:#000">width</span>=<span style="color:#E02975">700</span>&amp;<span style="color:#000">ratio</span>=<span style="color:#E02975">16-9</span>&amp;<span style="color:#000">resizeStyle</span>=<span style="color:#E02975">aspectfill</span></span>&amp;<span style="color:#000">flip</span>=<span style="color:#E02975">x</span></code>
 
-                    <blockquote class="normal">Flip</blockquote>
+                    <blockquote class="normal product__caption">Flip</blockquote>
                   </div>
                   <div>
                     <img src="http://52.213.165.8:8001/samples/mountain.png?width=700&ratio=12-7&resizeStyle=aspectfill&quality=10">
 
                     <code class="url txt--grey"><span style="color:#000">&hellip;</span>?<span style="color:#000">width</span>=<span style="color:#E02975">700</span>&amp;<span style="color:#000">ratio</span>=<span style="color:#E02975">16-9</span>&amp;<span style="color:#000">resizeStyle</span>=<span style="color:#E02975">aspectfill</span></span>&amp;<span style="color:#000">quality</span>=<span style="color:#E02975">10</span></code>
 
-                    <blockquote class="normal">Compress to save size</blockquote>
+                    <blockquote class="normal product__caption">Compress to save size</blockquote>
                   </div>
                 </div>
 
