--- a/web/workspace/public/assets/css/main.css
+++ b/web/workspace/public/assets/css/main.css
@@ -2176,7 +2176,7 @@ abbr {
   padding-left: 40px;
   margin-right: 45px;
   display: block;
-  border-right: 1px solid #d7d7d7; }
+  border-right: 1px solid #e0e0e0; }
 .list--products li:last-of-type a {
   border: none; }
 .list--products li img {
