--- a/web/workspace/frontend/sass/site/main.scss
+++ b/web/workspace/frontend/sass/site/main.scss
@@ -176,38 +176,38 @@ abbr {
 }
 
 .shadow--top {
-  box-shadow: 0 4px 11px 0 rgba(0,0,0,.04) inset;
+	box-shadow: 0 4px 11px 0 rgba(0,0,0,.04) inset;
 }
 .container--wide {
-  max-width: 1150px;
-  margin-top: 10px;
-  padding-top: 20px;
-  padding-bottom: 40px;
+	max-width: 1150px;
+	margin-top: 10px;
+	padding-top: 20px;
+	padding-bottom: 40px;
 }
 .list--feat li {
-  border-bottom: none;
-  position: relative;
-  list-style: none;
-  padding: 0 0 15px 35px;
+	border-bottom: none;
+	position: relative;
+	list-style: none;
+	padding: 0 0 15px 35px;
 }
 .list--feat svg,
 .list--feat img {
-  position: absolute;
-  left: 0; top: 4px;
-  width: 20px;
+	position: absolute;
+	left: 0; top: 4px;
+	width: 20px;
 }
 
 .product__gallery {
-  width: 140%;
-  position: absolute;
-  left: -15%;
-  height: 0;
-  padding-top: 81.5%;
-  margin-top: -40px;
+	width: 140%;
+	position: absolute;
+	left: -15%;
+	height: 0;
+	padding-top: 81.5%;
+	margin-top: -40px;
 
-  @media #{$break-small} {
-   	margin-top: 20px;
-  }
+	@media #{$break-small} {
+		margin-top: 20px;
+	}
 }
 .product__frame {
   background: #000;
@@ -240,23 +240,23 @@ abbr {
   }
 }
 .list--products li {
-  list-style: none;
-  position: relative;
+	list-style: none;
+	position: relative;
 }
 .list--products a {
 	padding-left: 40px;
 	margin-right: 45px;
 	display: block;
-	border-right: 1px solid #d7d7d7;
+	border-right: 1px solid #e0e0e0;
 }
 .list--products li:last-of-type a {
 	border: none;
 }
 .list--products li img {
-  position: absolute;
-  left: 0;  
-  width: 20px; height: auto;
-  margin-top: 7px;
+	position: absolute;
+	left: 0;  
+	width: 20px; height: auto;
+	margin-top: 7px;
 }
 
 .list--product {
@@ -303,19 +303,19 @@ abbr {
 }
 .gallery code {
 	position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    background: rgba(255,255,255,0.9);
-    padding: 20px;
+	top: 0;
+	left: 0;
+	right: 0;
+	background: rgba(255,255,255,0.9);
+	padding: 20px;
 }
 .product__caption {
 	position: absolute;
 	bottom: 20px; left: 20px;
 	background: rgba(#21262d, 0.9);
 	max-width: 60%;
-    color: #fff;
-    padding: 4px 12px;
-    display: inline-block;
-    border-radius: 6px;
+	color: #fff;
+	padding: 4px 12px;
+	display: inline-block;
+	border-radius: 6px;
 }
