--- a/web/workspace/pages/product.dust
+++ b/web/workspace/pages/product.dust
@@ -48,12 +48,12 @@
 
       <div class="col w-1-2">
         <ul class="list--feat medium">
-          {#features}         
+          {#headlines}         
             <li>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.1 19.4"><path fill="{color}" d="M7.9 19.4l-7.9-7 1.3-1.5 6.1 5.4L17.4 0l1.7 1z"/></svg>
-              {@soberMarkdown}{title}{/soberMarkdown}
+              {@soberMarkdown}{.}{/soberMarkdown}
             </li>
-          {/features}
+          {/headlines}
         </ul>
 
         <p class="alignl"><a href="#features" style="border-bottom: 1px solid {color}; font-size: 17px">More features &rarr;</a></p>
