--- a/web/workspace/pages/product.dust
+++ b/web/workspace/pages/product.dust
@@ -201,10 +201,10 @@
     <div class="bdr__top bdr--bdr-grey normal pad__top">
       <div class="grid">
         <div class="col w-1-2">
-          <p>{description[0]}</p>
+          {@markdown}{description[0]}{/markdown}
         </div>
         <div class="col w-1-2">
-          <p>{description[1]}</p>
+          {@markdown}{description[1]}{/markdown}
         </div>
       </div>
     </div>
