--- a/web/workspace/pages/product.dust
+++ b/web/workspace/pages/product.dust
@@ -31,7 +31,7 @@
     </div>
 
     <div class="grid">
-      <div class="col w-1-2">
+      <div class="col w-1-2 bs-alignc">
         <img src="/assets/products/dadi-{product}-full.png" class="" height="45" alt="DADI {title} logo">
 
         <p class="large no-marg-i pad__top--half pad__bottom">{@soberMarkdown}{overview}{/soberMarkdown}</p>
@@ -68,13 +68,13 @@
 
     <div class="grid marg__top product__visuals">
       <div class="col w-1-2">
-        <img src="/assets/explainer/connect-4.svg" class="marg__bottom" style="pointer-events: none;">
+        <img src="/assets/explainer/connect-4.svg" class="marg__bottom bs-hide" style="pointer-events: none;position: relative;left: -35%;">
 
         <p class="pad__top--half txt--mid-grey">Use with other <strong>DADI</strong> applications:</p>
 
-        <ul class="list--feat marg__top--x2 medium w-2-3 txt--mid-grey">
+        <ul class="cf list--feat marg__top--x2 medium txt--mid-grey">
           {#workswith}
-            <li><a href="/{params.lang}/{product}/"><img src="/assets/products/dadi-{product}.png">{@soberMarkdown}{description}{/soberMarkdown}</a></li>
+            <li class="w-2-3 bs-w-1-1"><a href="/{params.lang}/{product}/"><img src="/assets/products/dadi-{product}.png">{@soberMarkdown}{description}{/soberMarkdown}</a></li>
           {/workswith}
         </ul>
       </div>
